add selfie and buildings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
     <string name="app_name">QR Code Generator</string>
+    <string-array name="buildings_array">
+        <item>PTS</item>
+        <item>CSDL/ITS</item>
+        <item>OP (OFFICE OF THE PRESIDENT)</item>
+        <item>FVR</item>
+        <item>CMA</item>
+        <item>BASIC ED</item>
+        <item>CHS</item>
+        <item>GYM</item>
+        <item>STUDENT PLAZA</item>
+        <item>PHINMA GARDEN</item>
+        <item>NORTH HALL</item>
+        <item>MBA HALL</item>
+        <item>FACULTY CENTER</item>
+    </string-array>
 </resources>
